<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reserva"
    tools:context=".ui.reservas.ReservaModify">

    <!-- =========================
         CABECERA
         ========================= -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/reserva_dark"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/title_create_reserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserva_form_title"
            android:textSize="20sp"
            android:textColor="@color/color_dark"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Línea divisoria -->
    <View
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="@color/color_dark"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- =========================
         FORMULARIO
         ========================= -->

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- ===== ID (solo lectura) ===== -->
        <LinearLayout
            android:id="@+id/layout_reserva_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/id"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:fontFamily="@font/poppins_bold"/>

            <TextView
                android:id="@+id/text_reserva_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="#----"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:fontFamily="@font/poppins_bold"
                android:padding="12dp"/>
        </LinearLayout>

        <!-- ===== NOMBRE CLIENTE ===== -->
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre_cliente"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:fontFamily="@font/poppins_bold"/>

            <EditText
                android:id="@+id/nombre_cliente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:autofillHints="name"
                android:background="@drawable/item_background"
                android:padding="12dp"
                android:textSize="16sp"
                android:minHeight="48dp"
                android:importantForAutofill="no"/>

        </LinearLayout>

        <!-- ===== MOVIL CLIENTE ===== -->
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/movil"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:fontFamily="@font/poppins_bold"/>

            <EditText
                android:id="@+id/movil_cliente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_movil"
                android:inputType="phone"
                android:autofillHints="phone"
                android:background="@drawable/item_background"
                android:padding="12dp"
                android:textSize="16sp"
                android:minHeight="48dp"
                android:importantForAutofill="no"/>

        </LinearLayout>

        <!-- ===== FECHA DE RECOGIDA ===== -->
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha_recogida"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:fontFamily="@font/poppins_bold"/>

            <TextView
                android:id="@+id/fecha_recogida"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="12dp"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:background="@drawable/item_background"
                android:hint="@string/hint_fecha"
                android:focusable="false"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_calendar"
                android:drawablePadding="8dp"/>

        </LinearLayout>

        <!-- ===== HORARIO DE RECOGIDA ===== -->
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/horario_recogida"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:fontFamily="@font/poppins_bold"/>

            <RadioGroup
                android:id="@+id/horario_recogida"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/horario_recogida_manana"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/manana"
                    android:fontFamily="@font/poppins_regular"
                    android:button="@drawable/radio_button_orange"
                    app:useMaterialThemeColors="false"
                    android:paddingHorizontal="8dp"/>

                <RadioButton
                    android:id="@+id/horario_recogida_tarde"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tarde"
                    android:fontFamily="@font/poppins_regular"
                    android:button="@drawable/radio_button_orange"
                    app:useMaterialThemeColors="false"
                    android:paddingHorizontal="8dp"/>
            </RadioGroup>
        </LinearLayout>

        <!-- ===== FECHA DE DEVOLUCIÓN ===== -->
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha_devolucion"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:fontFamily="@font/poppins_bold"/>

            <TextView
                android:id="@+id/fecha_devolucion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="12dp"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:background="@drawable/item_background"
                android:hint="@string/hint_fecha"
                android:focusable="false"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_calendar"
                android:drawablePadding="8dp"/>

        </LinearLayout>

        <!-- ===== HORARIO DE DEVOLUCIÓN ===== -->
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/horario_devolucion"
                android:textSize="16sp"
                android:textColor="@color/color_dark"
                android:fontFamily="@font/poppins_bold"/>

            <RadioGroup
                android:id="@+id/horario_devolucion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/horario_devolucion_manana"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/manana"
                    android:fontFamily="@font/poppins_regular"
                    android:button="@drawable/radio_button_orange"
                    app:useMaterialThemeColors="false"
                    android:paddingHorizontal="8dp"/>

                <RadioButton
                    android:id="@+id/horario_devolucion_tarde"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tarde"
                    android:fontFamily="@font/poppins_regular"
                    android:button="@drawable/radio_button_orange"
                    app:useMaterialThemeColors="false"
                    android:paddingHorizontal="8dp"/>
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <!-- =========================
         BOTONES
         ========================= -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:textColor="@color/color_dark"
            android:fontFamily="@font/poppins_bold"
            app:backgroundTint="@color/colorCancel"
            app:strokeWidth="2dp"
            app:strokeColor="@color/color_dark"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/button_continue"
            android:textColor="@color/color_dark"
            android:fontFamily="@font/poppins_bold"
            app:backgroundTint="@color/colorSave"
            app:strokeWidth="2dp"
            app:strokeColor="@color/color_dark"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
